added viewmodels for my new view pages. there is an example in CarViewModel on how i can do things Refs #24

--- a/PRG_MAUI_Car_Register/AppShell.xaml
+++ b/PRG_MAUI_Car_Register/AppShell.xaml
@@ -11,5 +11,17 @@
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    <ShellContent
+        Title="CarPage"
+        ContentTemplate="{DataTemplate local:CarPage}"
+        Route="CarPage" />
+    <ShellContent
+        Title="TruckPage"
+        ContentTemplate="{DataTemplate local:TruckPage}"
+        Route="TruckPage" />
+    <ShellContent
+        Title="MotorcyclePage"
+        ContentTemplate="{DataTemplate local:MotorcyclePage}"
+        Route="MotorcyclePage" />
 
 </Shell>
