--- a/PRG_MAUI_Car_Register/view/MainPage.xaml
+++ b/PRG_MAUI_Car_Register/view/MainPage.xaml
@@ -38,7 +38,7 @@
 
             <ListView
                 Margin="0,0,0,20"
-                ItemsSource="{Binding }"
+                ItemsSource="{Binding Vehicles}"
                 />
 
 
