--- a/PRG_MAUI_Car_Register/view/MotorcyclePage.xaml
+++ b/PRG_MAUI_Car_Register/view/MotorcyclePage.xaml
@@ -5,8 +5,16 @@
              Title="MotorcyclePage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Welcome to the MotorcyclePage!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+		<HorizontalStackLayout HorizontalOptions="FillAndExpand" Spacing="20">
+			<Entry Placeholder="Search" Text="{Binding SearchQuery}" />
+			<Button Text="Search" Command="{Binding SearchCommand}"/>
+			<Label Text="{Binding SearchResult}"/>
+		</HorizontalStackLayout>
+
+		<ListView ItemsSource="{Bindin Motorcycles}" Margin="0,0,0,20"/>
     </VerticalStackLayout>
 </ContentPage>
