--- a/PRG_MAUI_Car_Register/view/CarPage.xaml
+++ b/PRG_MAUI_Car_Register/view/CarPage.xaml
@@ -15,7 +15,7 @@
 			<Label Text="{Binding SearchResult}"/>
 		</HorizontalStackLayout>
 
-		<ListView ItemsSource="{Bindin Cars}" Margin="0,0,0,20"/>
+		<ListView ItemsSource="{Binding Cars}" Margin="0,0,0,20"/>
 		  
     </VerticalStackLayout>
 </ContentPage>
