--- a/PRG_MAUI_Car_Register/view/MotorcyclePage.xaml
+++ b/PRG_MAUI_Car_Register/view/MotorcyclePage.xaml
@@ -15,6 +15,6 @@
 			<Label Text="{Binding SearchResult}"/>
 		</HorizontalStackLayout>
 
-		<ListView ItemsSource="{Bindin Motorcycles}" Margin="0,0,0,20"/>
+		<ListView ItemsSource="{Binding Motorcycles}" Margin="0,0,0,20"/>
     </VerticalStackLayout>
 </ContentPage>
