--- a/PRG_MAUI_Car_Register/view/TruckPage.xaml
+++ b/PRG_MAUI_Car_Register/view/TruckPage.xaml
@@ -15,6 +15,6 @@
 			<Label Text="{Binding SearchResult}"/>
 		</HorizontalStackLayout>
 		
-		<ListView ItemsSource="{Bindin Trucks}" Margin="0,0,0,20"/>
+		<ListView ItemsSource="{Binding Trucks}" Margin="0,0,0,20"/>
     </VerticalStackLayout>
 </ContentPage>
