--- a/PRG_MAUI_Car_Register/view/MainPage.xaml
+++ b/PRG_MAUI_Car_Register/view/MainPage.xaml
@@ -32,8 +32,8 @@
 
 
             <HorizontalStackLayout HorizontalOptions="FillAndExpand" Spacing="20">
-                <Entry Text="{Binding Search}" HorizontalOptions="FillAndExpand" Placeholder="Sök på registreringsnummer"></Entry>
-                <Button Command="{Binding SearchCommand}" Text="Sök" HorizontalOptions="End" BackgroundColor="DarkRed" TextColor="White" />
+                <Entry Text="{Binding Search}" HorizontalOptions="FillAndExpand" Placeholder="Search for Registrationnumber"></Entry>
+                <Button Command="{Binding SearchCommand}" Text="Search" HorizontalOptions="End" BackgroundColor="DarkRed" TextColor="White" />
             </HorizontalStackLayout>
             <Label Text="{Binding SearchResult}" TextColor="DarkRed" Margin="0,20,0,0"/>
         </VerticalStackLayout>
